# ha-energy-window-tracker-beta

./: .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  release-please-config.json  requirements_test.txt
.github/workflows/: pytest.yml  ruff.yml
custom_components/energy_window_tracker_beta/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/energy_window_tracker_beta/translations/: en.json
tests/: conftest.py  test_beta_window_first.py  test_config_flow.py  test_edge_cases.py  test_init.py  test_logging.py  test_sensor.py  test_window_setup.py
